--- a/01.md
+++ b/01.md
@@ -1,17 +1,60 @@
 # 複製虛擬機
 1. 對要複製的虛擬機按右鍵，選取clone，或按Ctrl+o鍵
 ![Alt text](/pic/clone1.png)
-
 2. 輸入名稱，按Next。
 ![Alt text](/pic/clone2.png)
 3. 選擇複製類型
-> Full Clone:用完全獨立的記憶體存放，較消耗硬體資源  
+> Full Clone:用完全獨立的硬體存放，較消耗硬體資源  
 > linked Clone:與原虛擬機共用硬體
 ![Alt text](/pic/clone3.png)
 # 讓兩台虛擬機互ping
-1. 把兩台虛擬機的enp0s8打開連線
+1. 把兩台主機的enp0s8打開連線
 ![Alt text](/pic/互ping1.png)
 2. 打開terminal
-3. 輸入ifconfig enp0s8，查看inet
+3. 輸入指令，查看inet
+```
+ifconfig enp0s8
+```
 4. ping對方enp0s8的inet
+```
+ping 192.168.56.102
+ping 192.168.56.103
+```
 ![Alt text](/pic/互ping2.png)
+# 建立內網通訊
+1. 關閉主機，進入setting/Networking/Adapter3選擇Internal Network，輸入名字
+![Alt text](/pic/內網1.png)
+2. 打開其他主機設定介面，選擇剛建立的網路
+![Alt text](/pic/內網2.png)
+3. 打開兩台主機，開啟enp0s9連線，開啟terminal
+4. 輸入su，進入超級使用者模式;
+5. 輸入指令，清除舊的設定
+```
+ifconfig enp0s9 0
+```
+6. 分別輸入
+```
+ifconfig enp0s9 192.168.200.1/24
+ifconfig enp0s9 192.168.200.2/24
+```
+![Alt text](/pic/內網3.png)
+6. 進行互ping，確認內網連線成功
+![Alt text](/pic/內網4.png) 
+# 進行遠端登陸
+執行指令需要系統管理員權限，因此可以先進入超級使用者模式
+1. 用其中一台主機安裝ssh
+```
+yum install openssh openssh-server 
+```
+2. 執行指令
+```
+systemctl start sshd
+systemctl status sshd
+```
+![Alt text](/pic/遠端1.png)
+3. 開啟另一台主機，輸入指令
+```
+ssh user@192.168.56.103
+```
+4. 輸入密碼，遠端登陸完成
+5. ![Alt text](/pic/遠端2.png)
