--- a/遠端登陸.md
+++ b/遠端登陸.md
@@ -4,7 +4,7 @@
 ssh-keygen
 ```
 產生的金鑰預設儲存在此路徑(/home/user/.ssh/)下
-![Alt text](/pic/公鑰1.png)
+![Alt text](/pic/公鑰.png)
 ### 隱藏檔案
 檔名前有.的檔案為"隱藏檔案"
 
@@ -21,7 +21,7 @@ ls
 ```
 gedit id_rsa id_rsa.pub
 ```
-id_rsa：私鑰
+id_rsa：私鑰  
 id_rsa.pub：公鑰
 ![Alt text](/pic/公鑰4.png)
 5. 把公鑰拷貝到另一台主機上。按yes，進行登錄
