--- a/遠端登陸.md
+++ b/遠端登陸.md
@@ -10,14 +10,13 @@ ssh-keygen
 
 2. 金鑰是否鑰密碼作保護，不要可直接按Enter。
 ![Alt text](/pic/公鑰2.png)
-3. 進入公鑰所在的路徑
+3. 進入公鑰所在的路徑，可以看到金鑰檔案
 ```
 cd /root/.ssh/
 ls
 ```
-![Alt text](/pic/公鑰3.png)
-可以看到金鑰檔案的名稱
-4. 查看金鑰內容
+![Alt text](/pic/公鑰3.png)  
+1. 查看金鑰內容
 ```
 gedit id_rsa id_rsa.pub
 ```
