--- a/遠端登陸.md
+++ b/遠端登陸.md
@@ -7,6 +7,7 @@ ssh-keygen
 ![Alt text](/pic/公鑰.png)
 ### 隱藏檔案
 檔名前有.的檔案為"隱藏檔案"
+可以用ls -a指令看見。  
 
 2. 金鑰是否鑰密碼作保護，不要可直接按Enter。
 ![Alt text](/pic/公鑰2.png)
